--- a/Code/Examen 5.ipynb
+++ b/Code/Examen 5.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "4                      2.29   33        1  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "max                        2.42  81.00     1.00  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -522,16 +522,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x250ae1cc230>"
+       "<seaborn.axisgrid.PairGrid at 0x250b4f0e960>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "Name: Outcome, dtype: bool"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
        "Age                             21.00        66.00  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
        "Age                                      768        0     0.00"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
        "Text(0, 0.5, 'Features')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
        "4                      2.29   33     True  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1476,8 +1476,8 @@
    ],
    "source": [
     "# ROC Curve\n",
-    "y_pred_proba = pipeline_gb.predict_proba(X_test)[:, 1]\n",
-    "fpr, tpr, _ = roc_curve(y_test, y_pred_proba)\n",
+    "y_pred_proba_gb = pipeline_gb.predict_proba(X_test)[:, 1]\n",
+    "fpr, tpr, _ = roc_curve(y_test, y_pred_proba_gb)\n",
     "roc_auc = auc(fpr, tpr)\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1632,8 +1632,8 @@
    ],
    "source": [
     "# ROC Curve\n",
-    "y_pred_proba = pipeline_rf.predict_proba(X_test)[:, 1]\n",
-    "fpr, tpr, _ = roc_curve(y_test, y_pred_proba)\n",
+    "y_pred_proba_rf = pipeline_rf.predict_proba(X_test)[:, 1]\n",
+    "fpr, tpr, _ = roc_curve(y_test, y_pred_proba_rf)\n",
     "roc_auc = auc(fpr, tpr)\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
@@ -1662,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1788,8 +1788,8 @@
    ],
    "source": [
     "# ROC Curve\n",
-    "y_pred_proba = pipeline_ab.predict_proba(X_test)[:, 1]\n",
-    "fpr, tpr, _ = roc_curve(y_test, y_pred_proba)\n",
+    "y_pred_proba_ab = pipeline_ab.predict_proba(X_test)[:, 1]\n",
+    "fpr, tpr, _ = roc_curve(y_test, y_pred_proba_ab)\n",
     "roc_auc = auc(fpr, tpr)\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
@@ -1818,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1897,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1931,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1947,8 +1947,8 @@
    ],
    "source": [
     "# ROC Curve\n",
-    "y_pred_proba = pipeline_xb.predict_proba(X_test)[:, 1]\n",
-    "fpr, tpr, _ = roc_curve(y_test, y_pred_proba)\n",
+    "y_pred_proba_xb = pipeline_xb.predict_proba(X_test)[:, 1]\n",
+    "fpr, tpr, _ = roc_curve(y_test, y_pred_proba_xb)\n",
     "roc_auc = auc(fpr, tpr)\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
@@ -1977,14 +1977,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 97%|█████████▋| 30/31 [00:01<00:00, 21.42it/s]"
+      " 97%|█████████▋| 30/31 [00:01<00:00, 18.64it/s]"
      ]
     },
     {
@@ -1992,13 +1992,12 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 213, number of negative: 401\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000146 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000152 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 668\n",
       "[LightGBM] [Info] Number of data points in the train set: 614, number of used features: 8\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.346906 -> initscore=-0.632669\n",
       "[LightGBM] [Info] Start training from score -0.632669\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
@@ -2094,13 +2093,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 31/31 [00:01<00:00, 19.60it/s]"
+      "100%|██████████| 31/31 [00:01<00:00, 15.82it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
@@ -2143,33 +2143,33 @@
       "\n",
       "                               Time Taken  \n",
       "Model                                      \n",
-      "QuadraticDiscriminantAnalysis        0.02  \n",
-      "GaussianNB                           0.00  \n",
-      "RidgeClassifierCV                    0.03  \n",
-      "DecisionTreeClassifier               0.02  \n",
-      "LinearDiscriminantAnalysis           0.02  \n",
-      "RidgeClassifier                      0.02  \n",
-      "LinearSVC                            0.02  \n",
-      "LogisticRegression                   0.02  \n",
-      "CalibratedClassifierCV               0.05  \n",
+      "QuadraticDiscriminantAnalysis        0.03  \n",
+      "GaussianNB                           0.03  \n",
+      "RidgeClassifierCV                    0.02  \n",
+      "DecisionTreeClassifier               0.08  \n",
+      "LinearDiscriminantAnalysis           0.05  \n",
+      "RidgeClassifier                      0.03  \n",
+      "LinearSVC                            0.03  \n",
+      "LogisticRegression                   0.03  \n",
+      "CalibratedClassifierCV               0.09  \n",
       "Perceptron                           0.02  \n",
-      "PassiveAggressiveClassifier          0.02  \n",
-      "ExtraTreesClassifier                 0.18  \n",
-      "AdaBoostClassifier                   0.18  \n",
+      "PassiveAggressiveClassifier          0.03  \n",
+      "ExtraTreesClassifier                 0.20  \n",
+      "AdaBoostClassifier                   0.15  \n",
       "NearestCentroid                      0.02  \n",
-      "LGBMClassifier                       0.25  \n",
-      "RandomForestClassifier               0.23  \n",
-      "SVC                                  0.03  \n",
-      "XGBClassifier                        0.18  \n",
-      "NuSVC                                0.03  \n",
-      "BaggingClassifier                    0.08  \n",
+      "LGBMClassifier                       0.24  \n",
+      "RandomForestClassifier               0.28  \n",
+      "SVC                                  0.04  \n",
+      "XGBClassifier                        0.19  \n",
+      "NuSVC                                0.05  \n",
+      "BaggingClassifier                    0.06  \n",
       "SGDClassifier                        0.02  \n",
       "KNeighborsClassifier                 0.03  \n",
       "ExtraTreeClassifier                  0.02  \n",
-      "BernoulliNB                          0.02  \n",
-      "LabelSpreading                       0.03  \n",
-      "LabelPropagation                     0.03  \n",
-      "DummyClassifier                      0.01  \n"
+      "BernoulliNB                          0.03  \n",
+      "LabelSpreading                       0.05  \n",
+      "LabelPropagation                     0.04  \n",
+      "DummyClassifier                      0.06  \n"
      ]
     },
     {
@@ -2202,6 +2202,75 @@
     "\n",
     "# Ver el rendimiento de los modelos\n",
     "print(models)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Comparacion**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Accuracy  Precision  Recall  F1-Score  ROC-AUC\n",
+      "GradienBoost      0.73       0.59    0.76      0.67     0.81\n",
+      "RandomForest      0.75       0.63    0.75      0.68     0.81\n",
+      "AdaBoost          0.74       0.61    0.78      0.68     0.81\n",
+      "XGBoost           0.70       0.56    0.73      0.63     0.75\n",
+      "Mejor modelo basado en las métricas:\n",
+      "Accuracy     RandomForest\n",
+      "Precision    RandomForest\n",
+      "Recall           AdaBoost\n",
+      "F1-Score     RandomForest\n",
+      "ROC-AUC      GradienBoost\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+    "\n",
+    "# Función para evaluar un modelo y calcular métricas\n",
+    "def evaluate_model(y_test, y_pred_, y_proba_):\n",
+    "    metrics = {\n",
+    "        \"Accuracy\": accuracy_score(y_test, y_pred_),\n",
+    "        \"Precision\": precision_score(y_test, y_pred_),\n",
+    "        \"Recall\": recall_score(y_test, y_pred_),\n",
+    "        \"F1-Score\": f1_score(y_test, y_pred_),\n",
+    "        \"ROC-AUC\": roc_auc_score(y_test, y_proba_),\n",
+    "    }\n",
+    "    return metrics\n",
+    "\n",
+    "\n",
+    "gb_metrics = evaluate_model(y_test, y_pred_gb,y_pred_proba_gb)\n",
+    "rf_metrics = evaluate_model(y_test, y_pred_rf, y_pred_proba_rf)\n",
+    "ada_metrics = evaluate_model(y_test, y_pred_ab, y_pred_proba_ab)\n",
+    "xb_metrics = evaluate_model(y_test, y_pred_xb, y_pred_proba_xb)\n",
+    "\n",
+    "# Comparar en un DataFrame\n",
+    "results = pd.DataFrame([gb_metrics, rf_metrics, ada_metrics, xb_metrics], index=[\"GradienBoost\", \"RandomForest\",\"AdaBoost\", \"XGBoost\"])\n",
+    "print(results)\n",
+    "\n",
+    "\n",
+    "# Identificar el modelo con mejor rendimiento\n",
+    "print(\"Mejor modelo basado en las métricas:\")\n",
+    "print(results.idxmax(axis=0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los resultados muestran que todos los modelos tienen un desempeño similar, con RandomForest destacando en Accuracy (0.75), Precision (0.63) y F1-Score (0.68), lo que indica un buen balance entre las clases. Sin embargo, AdaBoost sobresale en Recall (0.78), siendo más efectivo para identificar casos positivos, mientras que GradientBoost logra el mejor desempeño en discriminación general con un AUC de 0.81, empatando con otros modelos. Aunque RandomForest parece el mejor modelo en términos generales, AdaBoost podría ser preferido si priorizamos minimizar falsos negativos, dependiendo de los objetivos del problema."
    ]
   }
  ],
